# docker_uv_template

./: .copier-answers.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  copier.yml  development.md  pyproject.toml
.devcontainer/: .devcontainer.json  devcontainer.json
devops/: Dockerfile.base  Dockerfile.dev  deployment.md  dev_docker.sh  development.md
devops/dockerfiles/: Dockerfile.base  Dockerfile.deploy  Dockerfile.dev
devops/scripts/: build_docker_images.sh  deploy_app_in_docker.sh  deploy_docker.sh  dev_app_in_docker.sh  dev_docker.sh  lint.py
src/example_app/: __init__.py
template/: README.md.jinja  pyproject.toml.jinja
template/.devcontainer/: devcontainer.json.jinja
template/devops/: ci_example.yml  development.md
template/devops/dockerfiles/: Dockerfile.base.jinja  Dockerfile.deploy.jinja  Dockerfile.dev.jinja
template/devops/scripts/: build_docker_images.sh.jinja  deploy_app_in_docker.sh.jinja  dev_app_in_docker.sh.jinja
template/src/{{ package_module }}/: __init__.py.jinja
